--- a/.env
+++ b/.env
@@ -11,9 +11,17 @@ CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-MAIL_DRIVER=smtp
+MAIL_DRIVER=mailgun
+MAILGUN_DOMAIN = sandboxc9956b0631674c4da33154e8819147a6.mailgun.org
+MAILGUN_PASS = key-919d1d9d269217362ee51347b4270eca
+
+CONTACT_MAIL = barrantes.dev96@gmail.com
+CONTACT_NAME = Josue Barrantes
+
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=barrantes.dev96@gmail.com
 MAIL_PASSWORD=z3r0c00l
+MAIL_FROM=barrantes.dev96@gmail.com
+MAIL_NAME=JOSUE-BARRANTES
 MAIL_ENCRYPTION=tls
